@@ -1,11 +1,11 @@
 dnl ------------------------------------------------------------------------- 
-dnl $Id: configure.in,v 1.151.2.13 2015/05/19 04:54:00 uehira Exp $
+dnl $Id: configure.in,v 1.151.2.14 2015/06/06 09:09:32 uehira Exp $
 dnl -------------------------------------------------------------------------
 dnl Process this file with autoconf to produce a configure script.
 AC_INIT
 AC_CONFIG_SRCDIR([src/win.c])
 AC_CANONICAL_TARGET
-AM_INIT_AUTOMAKE(WIN_pkg, 2.2.18-uehira)
+AM_INIT_AUTOMAKE(WIN_pkg, 2.2.19-uehira)
 AC_CONFIG_HEADERS([config.h])
 AC_ARG_PROGRAM
 
